packages/portfolio-site/main/default/objects/Education__c/fields/Issuer__c.field-meta.xml
<CustomField>
    <fullName>Issuer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issuer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Education</relationshipLabel>
    <relationshipName>Education</relationshipName>
    <type>Lookup</type>
</CustomField>