packages/portfolio-site/main/default/objects/Education__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Field_of_Study__c</columns>
    <columns>GPA__c</columns>
    <columns>Issuer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>